@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.21 2005/01/05 07:52:28 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.22 2005/01/05 22:50:07 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  05 Jan 2005; Preston Cody <codeman@gentoo.org>
+  My mid-day update.  rewrote mount_local_partitions for order of mounting. fixed prepare_chroot
 
   05 Jan 2005; Preston Cody <codeman@gentoo.org>
   Overhauled the entire ArchTemplate and did a lot of other misc fixes in order to test it.
